# Infectious-Disease-Modeling

./: .gitignore  CMakeLists.txt  README.md
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: Analytics.cpp  Analytics.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  test.csv
ConsoleApplication1/ConsoleApplication1/res/: basicShader.vert  infectedMap.vert
Unused Code/: Neighborhood.h
deterministic/: Sir_model  Sir_model_initial  Sir_test.cpp  Sirs_model  Sis_model  sir.cpp  sirmodel  sirmodel_initial  sirsmodel  sirtest.cpp  sismodel
stochastic/: .makefile.swp  .person.h.swp  Analytics.cpp  Analytics.h  Disease.cpp  Disease.h  Map.cpp  Map.h  Model.cpp  Model.h  Neighborhood.cpp  Neighborhood.h  Person.cpp  Person.h  README.txt  SEIR.cpp  SEIR.h  SIR.cpp  SIR.h  SIRS.cpp  SIRS.h  Sample.cpp  Text_parse.cpp  Text_parse.h  _sim1.txt  _sim_instructions.txt  analytics.cpp  analytics.h  disease.cpp  disease.h  interaction.cpp  interaction.h  main  main.cpp  makefile  map.cpp  map.h  neighborhood.cpp  neighborhood.h  output.txt  (+8 more)
stochastic/Compartments/: Compartment.cpp  Compartment.h  E.cpp  E.h  I.h  R.h  S.h
stochastic/OpenGL/: Display.cpp  Mesh.cpp  Mesh.h  Shader.cpp  main.cpp
stochastic/OpenGL stuff/: Display.cpp  Display.h  Mesh.cpp  Mesh.h  Shader.h  main.cpp
stochastic/States/: E.cpp  E.h  I.cpp  I.h  R.cpp  R.h  S.cpp  S.h  State.cpp  State.h  makefile2.mak
test/: test.sln
test/test/: test.vcxproj
